# chess-piece-guesser

./: .gitignore  README.md  TODO.txt  main.py  projectplans.txt  pyproject.toml
chess_ml/: dataparser.py  dataprocess.py  dataset.py  encoding.py  evaluation.py  model.py  train_utils.py  visualization.py
data_processing/: boardviewer.py  data_parser.py
evals/: filtered_eval_comparison.txt  mlp_basic.txt  mlp_big.txt  transformer.txt
scripts/: board_viewer.py  code_testing.py  datadownload.py  eval.py  train.py
